2003-04-07  Dan Winship  <danw@ximian.com>

	* evolution-folder-selector-button.c (clicked): Desensitize the
	window's top-level container rather than desensitizing the window
	itself, which causes strange problems [#40854]. Also fix up the
	code that tries to watch for the parent window being destroyed.

	* e-shell.c (impl_Shell_selectUserFolder): Use
	e_dialog_set_transient_for_xid.

	* e-shell-folder-selection-dialog.c (impl_response): Treat
	GTK_RESPONSE_DELETE_EVENT the same as GTK_RESPONSE_CANCEL.
	(e_shell_folder_selection_dialog_construct): No need to catch
	"delete_event" signal.

2003-04-07  Dan Winship  <danw@ximian.com>

	* Makefile.am ($(server_in_files)): Substitute version number into
	the evolution binary name in the server file
	(INCLUDES): define EVOLUTION_TOOLSDIR

	* GNOME_Evolution_Shell.server.in.in: Clean up server names. Add
	"-@VERSION@" to the end of the shell binary name

	* main.c (main): if KILL_PROCESS_CMD is defined, add a
	--force-shutdown argument that runs killev and exits.

2003-04-07  Not Zed  <NotZed@Ximian.com>

	[#40536]

	* evolution-shell-component.c (impl_interactive): If going
	interactive, track the view id in a private area.
	(evolution_shell_component_get_parent_view_xid): Accessor method
	to retrieve the current view xid.

2003-04-06  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-view.c (update_window_icon): Get the large version of
	the icon instead of the small one, so it works more nicely with
	modern WMs.

2003-04-04  Ettore Perazzoli  <ettore@ximian.com>

	[#40413]

	* e-shell-folder-selection-dialog.c: Define RESPONSE_NEW for the
	"New" button in the dialog.
	(impl_response): Handle RESPONSE_NEW.
	(e_shell_folder_selection_dialog_construct): Add the "new" button
	with RESPONSE_NEW response_id.

2003-04-04  Ettore Perazzoli  <ettore@ximian.com>

	[#40748]

	* apps_evolution_shell.schemas: Remove the icon_modes schema.

	* e-shell-view.c (setup_defaults): Don't set the icon modes from